fix: centralize toolbar button rendering and fix visibility on resize

--- a/src/styles/overrides/_excalidraw.scss
+++ b/src/styles/overrides/_excalidraw.scss
@@ -162,3 +162,8 @@
 		border: none !important;
 	}
 }
+
+.excalidraw--mobile .App-toolbar--mobile .Stack_horizontal {
+  grid-template-columns: repeat(11, 1fr);
+  grid-auto-flow: unset;
+}
